concord_macros/tests/trybuild/fail/codegen/reserved_bytes_arity_two.rs
use concord_macros::api;

api! {
    client ReservedBytesArityTwoApi { base "https://example.com" }

    GET Download
        path ["download"]
        -> Bytes<A, B>
}

fn main() {}
