concord_macros/tests/trybuild/fail/codegen/reserved_bytes_arity_two.stderr
error: reserved endpoint I/O family `Bytes` does not take type arguments
 --> tests/trybuild/fail/codegen/reserved_bytes_arity_two.rs:8:12
  |
8 |         -> Bytes<A, B>
  |            ^^^^^^^^^^^
